--- a/02-IntroductiontoCommodity.qmd
+++ b/02-IntroductiontoCommodity.qmd
@@ -49,7 +49,7 @@ Some countries' economies rely heavily on the export of various kinds of commodi
 
 ### Forecasting Commodity Prices in Business
 
-Some companies business model leaves them exposed to risk that comes from price volatility and spend considerable resources forecasting prices. These tend to be companies that deal directly in commodities and need to hedge risks. Some examples include:
+Some companies business model leaves them exposed to risk that comes from price volatility and spend considerable resources analyzing prices. These tend to be companies that deal directly in commodities and need to hedge risks. Some examples include:
 
 -   ADM
 -   Cargill
@@ -66,7 +66,7 @@ Price analysis and price forecasting are not exactly the same thing. Price analy
 
 Price Analysis: - Goal is to understand the complex array of forces that influence the level and behavior of commodity prices - Aids in understanding performance of commodity markets - Aids in the development of policy, and is a key component of the policy analysis that leads the a policy's promotion or demise
 
-Price Forecasting: - Goal is to reliably and accurately forecast future price levels of commodities - The forecasts can be used in marketing and speculative strategies
+Price Forecasting: - Goal is to reliably and accurately forecast future price levels of commodities - The forecasts can be used in marketing, risk management, and speculative strategies
 
 ## Forecasting Basics
 
@@ -129,6 +129,8 @@ Price Forecasting: - Goal is to reliably and accurately forecast future price le
     -   Simple approaches lessen the chances of data mining problems.
 
         -   If a complex model is tailored to fit historical data very well, but does not capture the true nature of the data process, forecasts will perform poorly.
+
+    -   Machine learning methods are currently an active area of research.
 
 We focus on two types of "simple" forecasting methods.
 
